--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Adding the string resource -->
+    <string name="title">
+    투명한 기부, 진정한 영향력
+    어쩌구 저쩌구
+    </string>
+    <string name="bottom_title">
+    기부 금액 및 주제에 대한 결정은
+    투명한 과정을 거칩니다.
+    </string>
 </resources>
