--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="nowDonate">현재 모금액</string>
     <string name="nowDonate_Num">100,000원</string>
     <string name="donateBtn">기부하기</string>
+    <string name="donateDoneTitle">기부가 완료되었습니다.</string>
+    <string name="donateDoneContent">금액은 목표 모금액이 달성될 시\n유니세프 한국위원회로 전달됩니다.</string>
+    <string name="checkDonate">기부 내역 확인하기</string>
 </resources>
