feat : 기부금 등록 페이지

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="donateDoneTitle">기부가 완료되었습니다.</string>
     <string name="donateDoneContent">금액은 목표 모금액이 달성될 시\n유니세프 한국위원회로 전달됩니다.</string>
     <string name="checkDonate">기부 내역 확인하기</string>
+    <string name="donatement">사회적 영향력을 위해 기부에 대한 정보를
+정확히 제공해 주세요</string>
+    <string name="termAgree">이용약관에 동의해 주세요</string>
 </resources>
