--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,8 @@
     <string name="nowDonate_Num">100,000원</string>
     <string name="donateBtn">기부하기</string>
     <string name="donateDoneTitle">기부가 완료되었습니다.</string>
-    <string name="donateDoneContent">금액은 목표 모금액이 달성될 시\n유니세프 한국위원회로 전달됩니다.</string>
+    <string name="donateDoneContent">금액은 목표 모금액이 달성될 시\n유니세프 한국위원회로 전달됩니다.\n\n기부 등록 내역은 마이페이지에서
+확인할 수 있습니다.</string>
     <string name="checkDonate">기부 내역 확인하기</string>
     <string name="donatement">사회적 영향력을 위해 기부에 대한 정보를
 정확히 제공해 주세요</string>
