--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,7 @@
         <item>Step2</item>
         <item>FINAL</item>
     </array>
+    <string name="toSignup"><u>회원가입</u></string>
+    <string name="tologin"><u>로그인</u></string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
