--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,8 @@
     </array>
     <string name="toSignup"><u>회원가입</u></string>
     <string name="tologin"><u>로그인</u></string>
+    <string name="depostie_done">입금 완료</string>
+    <string name="depostie_not">입금 미완료</string>
     <string name="passwordneed">특수문자, 영대소문자를 포함한 8-20자로 작성해주세요</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
