--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,7 @@
     <string name="donateDoneTitle">기부가 완료되었습니다.</string>
     <string name="donateRegisterTitle">기부가 등록되었습니다.</string>
     <string name="toMain">메인으로 이동하기</string>
-    <string name="donateDoneContent">금액은 목표 모금액이 달성될 시\n유니세프 한국위원회로 전달됩니다.\n\n기부 등록 내역은 마이페이지에서
-확인할 수 있습니다.</string>
+    <string name="donateDoneContent">금액은 목표 모금액이 달성될 시\n유니세프 한국위원회로 전달됩니다.\n\n기부 등록 내역은\n마이페이지에서 확인할 수 있습니다.</string>
     <string name="notice">정해진 기한까지 정확한 입금하지 않으면\n기부는 취소됩니다.</string>
     <string name="check">가상 계좌 입금 여부는 마이페이지에 있는\n기부 현황에서 확인해 주세요.</string>
     <string name="checkDonate">기부 내역 확인하기</string>
