feat : 프로필 이미지 입력 step 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <array name="steps">
         <item>Step1</item>
         <item>Step2</item>
+        <item>Step3</item>
         <item>FINAL</item>
     </array>
     <string name="toSignup"><u>회원가입</u></string>
